syntax = "proto3";
option csharp_namespace = "Aevatar.Agents.AI.WithProcessStrategy.Messages";

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";

message StrategyTokenUsage {
  int32 prompt_tokens = 1;
  int32 completion_tokens = 2;
  int32 total_tokens = 3;
  double estimated_cost = 4;
}

enum AevatarAIProcessingMode {
  AEVATAR_AI_PROCESSING_MODE_UNSPECIFIED = 0;
  AEVATAR_AI_PROCESSING_MODE_STANDARD = 1;
  AEVATAR_AI_PROCESSING_MODE_CHAIN_OF_THOUGHT = 2;
  AEVATAR_AI_PROCESSING_MODE_RE_ACT = 3;
  AEVATAR_AI_PROCESSING_MODE_TREE_OF_THOUGHTS = 4;
}

message AevatarAIProcessingRequest {
  string request_id = 1;
  google.protobuf.Any input_event = 2;
  string prompt_template = 3;
  map<string, string> parameters = 4;
  AevatarAIProcessingMode mode = 5;
}

message AevatarAIProcessingResponse {
  string request_id = 1;
  google.protobuf.Any output_event = 2;
  string generated_text = 3;
  repeated StrategyToolInvocation tool_invocations = 4;
  StrategyTokenUsage token_usage = 5;
  int64 processing_time_ms = 6;
}

message StrategyToolInvocation {
  string tool_name = 1;
  map<string, string> arguments = 2;
  string result = 3;
}

// Reasoning and Thought Events

message AevatarThoughtStepEvent {
  string agent_id = 1;
  string thought_id = 2;
  int32 step_number = 3;
  string thought_content = 4;
  string reasoning = 5;
  google.protobuf.Timestamp timestamp = 6;
}

message AevatarReActObservationEvent {
  string agent_id = 1;
  int32 iteration = 2;
  string observation = 3;
  google.protobuf.Timestamp timestamp = 4;
}

message AevatarTreeOfThoughtsNodeEvent {
  string agent_id = 1;
  string node_id = 2;
  string parent_node_id = 3;
  string thought_content = 4;
  double confidence_score = 5;
  bool is_selected = 6;
  google.protobuf.Timestamp timestamp = 7;
}

// Tree of Thoughts completed event
message AevatarTreeOfThoughtsCompletedEvent {
  string agent_id = 1;
  string thought_tree_id = 2;
  string selected_path = 3;
  double confidence = 4;
  google.protobuf.Timestamp timestamp = 5;
}